added two pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<a href="index2.html">Venues</a>
 				<a href="index3.html">Reservations</a>
 				<a href="index4.html">Events</a>
+				<!-- khhjsfjfghjfjgsgagf -->
 			</nav>
 			<img id="homeImage" src="img/homeImage.jpg" height="180" width="315">
 			<article id="Events">
