--- a/index2.html
+++ b/index2.html
@@ -18,17 +18,16 @@
 			<nav class="nav">
 				<a href="index.html">Home</a>
 				<a href="index2.html">Venues</a>
-				<a href="index3.html">Reservations</a>
+				<a href="index3.html">Bookings</a>
 				<a href="index4.html">Events</a>
 			</nav>
-			  <div id="Main">
+			  <div id="venueMain">
               <h1>Venues
                <img class= "dividers" src="img/divider.png" height="33" width="300"></h1>
                 <div class="view view-first">
                     <img src="img/1.jpg" />
                     <div class="mask">
                         <h2>#1</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>  
@@ -36,7 +35,6 @@
                     <img src="img/2.jpg" />
                     <div class="mask">
                         <h2>#2</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>  
@@ -44,7 +42,6 @@
                     <img src="img/3.jpg" />
                     <div class="mask">
                         <h2> #3</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>  
@@ -52,7 +49,6 @@
                     <img src="img/4.jpg" />
                     <div class="mask">
                         <h2> #4</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>
@@ -60,7 +56,6 @@
                     <img src="img/5.jpg" />
                     <div class="mask">
                         <h2> #4</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>
@@ -68,7 +63,6 @@
                     <img src="img/6.jpg" />
                     <div class="mask">
                         <h2> #4</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>
@@ -76,7 +70,6 @@
                     <img src="img/7.jpg" />
                     <div class="mask">
                         <h2>#4</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>
@@ -84,7 +77,6 @@
                     <img src="img/8.jpg" />
                     <div class="mask">
                         <h2> #4</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
                         <a href="#" class="info">Read More</a>
                     </div>
                 </div>
