--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 			<nav class="nav">
 				<a href="index.html">Home</a>
 				<a href="index2.html">Venues</a>
-				<a href="index3.html">Reservations</a>
+				<a href="index3.html">Bookings</a>
 				<a href="index4.html">Events</a>
-				<!-- khhjsfjfghjfjgsgagf -->
 			</nav>
 			<img id="homeImage" src="img/homeImage.jpg" height="180" width="315">
-			<article id="Events">
+			<article id="article1">
 				<img class="dividers" src="img/divider.png" height="33" width="300">
 				<p>  
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -29,12 +28,13 @@
 				</p>
 				<img class="dividers" src="img/divider.png" height="33" width="300">
 			</article>
-			<aside id="Hours">
+			<aside id="aside1">
 				<h1>Opening Hours</h1>
 				<p>
 				Thurs-Sat: 9pm - Close<br>
-				Sun-Wed: 8pm - 1am
-				<hr>	
+				Sun-Wed: 8pm - 1am</p>
+				<hr>
+				<p>	
 				600 Terry St.<br>
 				North Hollywood, CA 91789
 				<br>
@@ -46,9 +46,9 @@
 			<footer class="footer">
 			<br>
 			<div class="socialIcons">
-				<img class="button" src="img/twitter.png" height="42" width="42">
-				<img class="button" src="img/facebook.png" height="42" width="42">
-				<img class="button" src="img/instagram.png" height="42" width="42">
+				<a href="http://www.twitter.com"><img class="button" src="img/twitter.png" height="42" width="42"></a>
+				<a href="http://www.facebook.com"><img class="button" src="img/facebook.png" height="42" width="42"></a>
+				<a href="http://www.instagram.com"><img class="button" src="img/instagram.png" height="42" width="42"></a>
 			</div>
 			<br>
 			&copy; 2015 Nightlight.com | All right reserved.</footer>
