--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				<a href="index3.html">Bookings</a>
 				<a href="index4.html">Events</a>
 			</nav>
-			<img id="homeImage" src="img/homeImage.jpg" height="180" width="315">
+			<div class="bw pic">
+				  <img src="img/homeImage.jpg" height="180" width="315" alt="sea">
+			</div>
 			<article id="article1">
 				<img class="dividers" src="img/divider.png" height="33" width="300">
 				<p>  
@@ -39,10 +41,10 @@
 				North Hollywood, CA 91789
 				<br>
 				Tel: 909-248-5478
-				Fax: 626-786-8950
 				</p>
 				<br>
 			</aside>
+			<gap:plugin name="nl.x-services.plugins.socialsharing" version="4.3.8" />
 			<footer class="footer">
 			<br>
 			<div class="socialIcons">
