--- a/index2.html
+++ b/index2.html
@@ -28,65 +28,66 @@
                     <img src="img/1.jpg" />
                     <div class="mask">
                         <h2>#1</h2>
-                        <a href="#" class="info">Read More</a>
+                        <p>ubfjqbob oqbfoqf biobfb</p>
                     </div>
                 </div>  
                 <div class="view view-first">
                     <img src="img/2.jpg" />
                     <div class="mask">
-                        <h2>#2</h2>
-                        <a href="#" class="info">Read More</a>
+                        <h2>#2</h2>                       
+                        <p>ubfjqbob oqbfoqf biobfb</p>
+                       
                     </div>
                 </div>  
                 <div class="view view-first">
                     <img src="img/3.jpg" />
                     <div class="mask">
-                        <h2> #3</h2>
-                        <a href="#" class="info">Read More</a>
+                        <h2> #3</h2>                       
+                        <p>ubfjqbob oqbfoqf biobfb</p>
                     </div>
                 </div>  
                 <div class="view view-first">
                     <img src="img/4.jpg" />
                     <div class="mask">
-                        <h2> #4</h2>
-                        <a href="#" class="info">Read More</a>
+                        <h2> #4</h2>                    
+                        <p>ubfjqbob oqbfoqf biobfb</p>
                     </div>
                 </div>
                 <div class="view view-first">
                     <img src="img/5.jpg" />
                     <div class="mask">
-                        <h2> #4</h2>
-                        <a href="#" class="info">Read More</a>
+                        <h2> #4</h2>                      
+                        <p>ubfjqbob oqbfoqf biobfb</p>
                     </div>
                 </div>
                 <div class="view view-first">
                     <img src="img/6.jpg" />
                     <div class="mask">
                         <h2> #4</h2>
-                        <a href="#" class="info">Read More</a>
+                        <p>ubfjqbob oqbfoqf biobfb</p>
                     </div>
                 </div>
                 <div class="view view-first">
                     <img src="img/7.jpg" />
                     <div class="mask">
-                        <h2>#4</h2>
-                        <a href="#" class="info">Read More</a>
+                        <h2>#4</h2>                    
+                        <p>ubfjqbob oqbfoqf biobfb</p>                      
                     </div>
                 </div>
                 <div class="view view-first">
                     <img src="img/8.jpg" />
                     <div class="mask">
-                        <h2> #4</h2>
-                        <a href="#" class="info">Read More</a>
+                        <h2> #4</h2>                     
+                        <p>ubfjqbob oqbfoqf biobfb</p>
                     </div>
                 </div>
             </div>
 			<footer class="footer">
                 <br>
             <div class="socialIcons">
-                <img class="button" src="img/twitter.png" height="42" width="42">
-                <img class="button" src="img/facebook.png" height="42" width="42">
-                <img class="button" src="img/instagram.png" height="42" width="42">
+                <a href="http://www.twitter.com"><img class="button" src="img/twitter.png" height="42" width="42"></a>
+                <a href="http://www.facebook.com"><img class="button" src="img/facebook.png" height="42" width="42"></a>
+                <a href="http://www.instagram.com"><img class="button" src="img/instagram.png" height="42" width="42"></a>
             </div>
             <br>&copy; 2015 Nightlight.com | All right reserved.</footer>
 		</div>
