--- a/index3.html
+++ b/index3.html
@@ -26,6 +26,7 @@
                 <p class="book">1800.354.2351</p>
                 <hr>
                 <form>
+                <br>
 					<ul class="form-style-1">
 					    <li><label>Full Name <span class="required">*</span></label><input type="text" name="field1" class="field-divided" placeholder="First" />&nbsp;<input type="text" name="field2" class="field-divided" placeholder="Last" /></li>
 					    <li>
@@ -40,15 +41,14 @@
 					        <input type="submit" value="Submit" />
 					    </li>
 					</ul>
-				</form> 
-				<hr>     
+				</form>     
             </article>
 			<footer class="footer">
                 <br>
             <div class="socialIcons">
-                <img class="button" src="img/twitter.png" height="42" width="42">
-                <img class="button" src="img/facebook.png" height="42" width="42">
-                <img class="button" src="img/instagram.png" height="42" width="42">
+                <a href="http://www.twitter.com"><img class="button" src="img/twitter.png" height="42" width="42"></a>
+				<a href="http://www.facebook.com"><img class="button" src="img/facebook.png" height="42" width="42"></a>
+				<a href="http://www.instagram.com"><img class="button" src="img/instagram.png" height="42" width="42"></a>
             </div>
             <br>&copy; 2015 Nightlight.com | All right reserved.</footer>
 		</div>
