--- a/index4.html
+++ b/index4.html
@@ -45,9 +45,9 @@
             <footer class="footer">
                 <br>
             <div class="socialIcons">
-                <img class="button" src="img/twitter.png" height="42" width="42">
-                <img class="button" src="img/facebook.png" height="42" width="42">
-                <img class="button" src="img/instagram.png" height="42" width="42">
+                <a href="http://www.twitter.com"><img class="button" src="img/twitter.png" height="42" width="42"></a>
+                <a href="http://www.facebook.com"><img class="button" src="img/facebook.png" height="42" width="42"></a>
+                <a href="http://www.instagram.com"><img class="button" src="img/instagram.png" height="42" width="42"></a>
             </div>
             <br>&copy; 2015 Nightlight.com | All right reserved.</footer>
         </div>
